--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .card {
   width: 25rem;
   height: auto;
@@ -58,7 +57,6 @@
   align-items: center;
   border: 0.1rem solid #CCC;
 }
-
 .card-count {
   width: 25rem;
   height: auto;
@@ -71,28 +69,23 @@
   border: 0.1rem solid #CCC;
   text-align: center;
 }
-
 .card-imagen {
   width: auto;
   height: 7rem;
   object-fit: cover;
 }
-
 .card-titulo {
   padding: 0.5rem 0;
   height: 3rem;
 }
-
 .card-descripcion {
   padding: 0.5rem 0;
   height: 10rem;
   overflow: auto;
 }
-
 .card-precio {
   padding: 0.5rem 0;
 }
-
 .card-boton {
   padding-top: 0.5rem;
   background-color: #A20BAE;
@@ -104,7 +97,6 @@
   text-decoration: none;
   margin: 1rem;
 }
-
 .card-boton-continuar {
   padding-top: 0.5rem;
   background-color: #2f25af;
@@ -116,7 +108,6 @@
   text-decoration: none;
   margin: 1rem;
 }
-
 .btn {
   padding-top: 0.5rem;
   color: white;
@@ -147,11 +138,9 @@
 .btn-secondary:hover {
   background-color: #1b10ac;
 }
-
 .card-boton:hover {
   background-color: #4d0252;
 }
-
 .card-boton-continuar:hover {
   background-color: #1b10ac;
 }
@@ -172,4 +161,37 @@
   color: #A20BAE;
   right: 2rem;
   top: -1.5rem;
+}
+.cart-total {
+  text-align: center;
+}
+.cart-total-negrita {
+  font-weight: bold;
+}
+.cart-totalVaciar {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+.cart-item-delete {
+  border: none;
+  cursor: pointer;
+}
+
+.table {
+  text-align: center;
+  width: 100%;
+  margin: 0.8rem 0;
+}
+.table-titulo {
+  font-weight: bold;
+  background-color: #9ed4f8;
+  padding: 1rem 0;
+  font-size: 1rem;
+}
+.table-info {
+  background-color: rgb(243, 243, 243);
+  padding: 1rem 0;
+  font-size: 0.8rem;
 }
